--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
-language: bash
+dist: xenial
+sudo: required
 env:
-- DOCKER_CLI_EXPERIMENTAL=enabled
-services:
-  - docker
-script:
-  - docker buildx create --name builder
-  - docker buildx use builder
-  - docker buildx inspect --bootstrap
-  - docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
-  - docker buildx build --platform linux/arm/v7 -t nelsonyaccuzzi/docker-rpi-deluge:latest --push .
+  global:
+    - DOCKER_REPO=nelsonyaccuzzi/docker-rpi-deluge
+before_install:
+  - curl -fsSL https://get.docker.com | sh
+  - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
+  - mkdir -p $HOME/.docker
+  - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
+  - sudo service docker start
+install:
+  - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+  - docker buildx create --name xbuilder --use
+script: bash ci.sh
