--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: bash
+sudo: required
 dist: xenial
 env:
   global:
@@ -7,7 +8,7 @@ services:
   - docker
 before_install:
   - echo '{"experimental":"enabled"}' | tee /etc/docker/daemon.json
-  - sudo service docker start
+  - service docker start
 install:
   - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
   - docker buildx create --name xbuilder --use
