--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 services:
   - docker
 before_install:
-  - echo '{"experimental":"enabled"}' | tee /etc/docker/daemon.json
+  - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
   - service docker start
 install:
   - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
