--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: bash
+language: shell
 sudo: required
 dist: xenial
 env:
@@ -8,7 +8,7 @@ services:
   - docker
 before_install:
   - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
-  - service docker start
+  - sudo service docker start
 install:
   - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
   - docker buildx create --name xbuilder --use
