--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: shell
-sudo: required
 dist: xenial
+sudo: required
 env:
   global:
     - DOCKER_REPO=nelsonyaccuzzi/docker-rpi-deluge
-services:
-  - docker
 before_install:
+  - curl -fsSL https://get.docker.com | sh
   - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
+  - mkdir -p $HOME/.docker
+  - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
   - sudo service docker start
 install:
   - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
   - docker buildx create --name xbuilder --use
-script: scripts/build.sh
+script: ./scripts/build.sh
